test/syntax/soliditypp/tokenid/tokenid_with_bad_checksum.solpp
// SPDX-License-Identifier: GPL-3.0
pragma soliditypp >=0.8.0;

contract BadTokenIdChecksum {
    vitetoken t = "tti_5649544520544f4b454e0000";
}
// ----
// SyntaxError 9429: (112-142): This looks like a Vite Token Id but has an invalid checksum.
